added design and logic

--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,11 @@
 
         <div id="helloScreen">
             <h1 class="hello">Hello, click button</h1>
-            <button class="btn btn-primary" id="helloButton">continue</button>
+            <button class="btn btn-primary" id="helloButton">Continue</button>
         </div>
         <div id="chooseEnemyScreen">
-            <button class="btn btn-secondary to-main-button">To begin</button>
-            <p>Choose enemy:</p>
+            <button class="btn btn-secondary to-main-button">Home</button>
+            <p class="chooseEnemy">Choose enemy:</p>
             <ul id="enemyList">
 
             </ul>
